Modified import of Excel files. Removed warnings.